--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,8 +61,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/imagens/cenario/
+    - assets/imagens/videos/
     - assets/imagens/
-    - assets/videos
 
 
 
