primeiros codigos BD
Iniciando o banco de dados.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,16 +27,19 @@ environment:
 # dependencies can be manually updated by changing the version numbers below to
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
+
 dependencies:
+
   vibration: ^1.8.4
   flutter:
     sdk: flutter
-
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   video_player: ^2.2.13
+  sqflite: ^2.0.0+3
+
 
 dev_dependencies:
   flutter_test:
@@ -93,3 +96,6 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+
